Hide slider background image at start, to avoid flickering

--- a/scss/agency.scss
+++ b/scss/agency.scss
@@ -227,6 +227,7 @@ h1, h2, h3, h4, h5, h6 {
 header {
   padding-top: 3.5em;
   .static-slider {
+    display: none;
     width: 100%;
     height: 100%;
     img {
